docs(reactnative): update react native docs to reflect new API (#133)
- also update NLU examples to use Minecraft sample